--- a/creator.html
+++ b/creator.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #0f0f0f;
+            background-color: #0b0c0d;
             color: white;
         }
 
@@ -53,13 +53,14 @@
         }
 
         .nav-links a:hover, .nav-links a.active {
-            background-color: #1a1a1a;
+            background-color: #141516;
         }
 
         .creator-container {
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #0b0c0d;
         }
 
         h1 {
@@ -69,10 +70,11 @@
         }
 
         .form-section {
-            background-color: #1A1A1A;
+            background-color: #141516;
             padding: 20px;
             border-radius: 8px;
             margin-bottom: 20px;
+            border: 1px solid #7e7568;
         }
 
         .input-group {
@@ -84,9 +86,9 @@
         }
 
         input[type="text"], select, textarea {
-            background-color: #2C3539;
+            background-color: #232a2e;
             color: white;
-            border: 1px solid #444;
+            border: 1px solid #7e7568;
             padding: 8px 12px;
             border-radius: 4px;
             font-size: 14px;
@@ -111,12 +113,13 @@
         }
 
         .section-header {
-            background-color: #2C3539;
+            background-color: #232a2e;
             padding: 10px;
             text-align: center;
             font-weight: bold;
             margin-bottom: 10px;
             border-radius: 4px;
+            color: #999;
         }
 
         .form-row {
@@ -131,12 +134,13 @@
 
         .form-col label {
             display: block;
-            background-color: #2C3539;
+            background-color: #232a2e;
             padding: 8px;
             text-align: center;
             font-weight: bold;
             border-radius: 4px;
             margin-bottom: 5px;
+            color: #999;
         }
 
         .form-col select {
@@ -179,7 +183,7 @@
         }
 
         .submit-btn:disabled {
-            background-color: #666;
+            background-color: #999;
             cursor: not-allowed;
         }
 
@@ -400,7 +404,7 @@
                     <div style="height: 75px; margin-bottom: 15px;"></div>
 
                     <div style="margin-bottom: 15px;">
-                        <label style="display: block; background-color: #2C3539; padding: 8px; text-align: center; font-weight: bold; border-radius: 4px; margin-bottom: 5px;">Aspect</label>
+                        <label style="display: block; background-color: #232a2e; padding: 8px; text-align: center; font-weight: bold; border-radius: 4px; margin-bottom: 5px; color: #999;">Aspect</label>
                         <div class="select-with-icon">
                             <img id="aspect3Icon" class="selected-icon" src="" alt="">
                             <select id="aspect3" style="width: 100%;" onchange="updateAspectOptions(); updateAspectIcons()">
@@ -1157,7 +1161,5 @@
             }
         }
         </script>
-</body>
+    </body>
 </html>
-
-
