--- a/creator.html
+++ b/creator.html
@@ -140,7 +140,7 @@
             font-weight: bold;
             border-radius: 4px;
             margin-bottom: 5px;
-            color: #999;
+            color: white;
         }
 
         .form-col select {
