--- a/creator.html
+++ b/creator.html
@@ -119,7 +119,7 @@
             font-weight: bold;
             margin-bottom: 10px;
             border-radius: 4px;
-            color: #999;
+            color: white;
         }
 
         .form-row {
@@ -261,7 +261,7 @@
     </nav>
 
     <div class="creator-container">
-        <h1>Create Your Build</h1>
+        <h1>Create Build</h1>
         
         <div id="successMessage" class="success-message">
             Build created successfully! <a href="index.html" style="color: white; text-decoration: underline;">View all builds</a>
@@ -404,7 +404,7 @@
                     <div style="height: 75px; margin-bottom: 15px;"></div>
 
                     <div style="margin-bottom: 15px;">
-                        <label style="display: block; background-color: #232a2e; padding: 8px; text-align: center; font-weight: bold; border-radius: 4px; margin-bottom: 5px; color: #999;">Aspect</label>
+                        <label style="display: block; background-color: #232a2e; padding: 8px; text-align: center; font-weight: bold; border-radius: 4px; margin-bottom: 5px; color: white;">Aspect</label>
                         <div class="select-with-icon">
                             <img id="aspect3Icon" class="selected-icon" src="" alt="">
                             <select id="aspect3" style="width: 100%;" onchange="updateAspectOptions(); updateAspectIcons()">
@@ -1163,3 +1163,4 @@
         </script>
     </body>
 </html>
+
