--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
             gap: 15px;
             margin-bottom: 10px;
             font-size: 14px;
+            justify-content: center;
+            flex-wrap: wrap;
         }
 
         .build-info-item {
@@ -927,5 +929,6 @@
     </script>
 </body>
 </html>
+
 
 
