--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
 
         .build-info-value {
             color: #fff;
+            text-align: center;
+            max-width: 60px;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
         }
 
         .build-card-footer {
@@ -929,6 +933,7 @@
     </script>
 </body>
 </html>
+
 
 
 
