--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            flex: 0 1 auto;
+            min-height: 80px;
         }
 
         .build-info-item img {
@@ -193,10 +195,9 @@
         .build-info-value {
             color: #fff;
             text-align: center;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 90px;
+            word-break: break-word;
+            max-width: 70px;
+            line-height: 1.2;
         }
 
         .build-card-footer {
@@ -934,6 +935,7 @@
     </script>
 </body>
 </html>
+
 
 
 
