--- a/index.html
+++ b/index.html
@@ -164,11 +164,12 @@
 
         .build-info {
             display: flex;
-            gap: 15px;
+            gap: 20px;
             margin-bottom: 10px;
             font-size: 14px;
             justify-content: center;
             flex-wrap: wrap;
+            row-gap: 15px;
         }
 
         .build-info-item {
@@ -935,6 +936,7 @@
     </script>
 </body>
 </html>
+
 
 
 
