--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 
         .build-info {
             display: flex;
-            gap: 10px;
+            gap: 0;
             margin-bottom: 10px;
             font-size: 14px;
-            justify-content: center;
+            justify-content: space-between;
             flex-wrap: wrap;
             row-gap: 10px;
         }
@@ -936,6 +936,7 @@
     </script>
 </body>
 </html>
+
 
 
 
