--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 
         .build-info {
             display: flex;
-            gap: 0;
+            gap: 10px;
             margin-bottom: 10px;
             font-size: 14px;
-            justify-content: space-between;
+            justify-content: center;
             flex-wrap: wrap;
             row-gap: 10px;
         }
@@ -176,8 +176,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            flex: 0 1 auto;
-            min-height: 80px;
+            flex: 1 1 calc(20% - 10px);
+            min-width: 70px;
         }
 
         .build-info-item img {
@@ -936,6 +936,7 @@
     </script>
 </body>
 </html>
+
 
 
 
