--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         .build-info {
             display: flex;
-            gap: 10px;
+            gap: 12px;
             margin-bottom: 10px;
             font-size: 14px;
             justify-content: center;
@@ -176,8 +176,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            flex: 1 1 calc(20% - 10px);
-            min-width: 70px;
+            flex: 0 1 auto;
+            min-height: 80px;
         }
 
         .build-info-item img {
@@ -936,6 +936,7 @@
     </script>
 </body>
 </html>
+
 
 
 
