--- a/index.html
+++ b/index.html
@@ -662,6 +662,21 @@
             });
         });
 
+function adjustBuildInfoSpacing() {
+            document.querySelectorAll('.build-info').forEach(buildInfo => {
+                const itemCount = buildInfo.querySelectorAll('.build-info-item').length;
+                if (itemCount <= 2) {
+                    buildInfo.style.gap = '30px';
+                } else if (itemCount <= 3) {
+                    buildInfo.style.gap = '20px';
+                } else if (itemCount <= 4) {
+                    buildInfo.style.gap = '15px';
+                } else {
+                    buildInfo.style.gap = '12px';
+                }
+            });
+        }
+		
         function filterBuilds() {
     		let filtered = [...(window.builds || [])];
 
@@ -714,6 +729,7 @@
                     </div>
                 </div>
             `).join('');
+			adjustBuildInfoSpacing();
         }
 
        function openModalByFirebaseId(firebaseId) {
@@ -936,6 +952,7 @@
     </script>
 </body>
 </html>
+
 
 
 
