--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getFirestore, collection, getDocs, doc, updateDoc, increment } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
 
-        window.firebaseModules = { doc, updateDoc, increment };
+       	window.firebaseModules = { doc, updateDoc, increment };
+        window.db = db;
 
         // Firebase configuration
         const firebaseConfig = {
@@ -914,10 +915,10 @@ function adjustBuildInfoSpacing() {
                     likes: window.firebaseModules.increment(change)
                 });
                 
-                // Update local build
+                // Update local build and UI
                 const build = window.builds.find(b => b.firebaseId === firebaseId);
                 if (build) {
-                    build.likes = Math.max(0, build.likes + change);
+                    build.likes += change;
                     const likeSpan = document.querySelector(`[data-build-id="${firebaseId}"]`);
                     if (likeSpan) {
                         likeSpan.textContent = `❤️ ${build.likes}`;
@@ -925,6 +926,7 @@ function adjustBuildInfoSpacing() {
                 }
             } catch (error) {
                 console.error('Error updating likes:', error);
+                alert('Failed to update like');
             }
         }
 
@@ -950,6 +952,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
