--- a/index.html
+++ b/index.html
@@ -629,8 +629,20 @@
         };
 		
         // Save liked builds to localStorage
+        function getBrowserFingerprint() {
+            return btoa(navigator.userAgent + navigator.language + screen.width + screen.height);
+        }
+
         function saveLikes() {
+            const fingerprint = getBrowserFingerprint();
             localStorage.setItem('likedBuilds', JSON.stringify([...likedBuilds]));
+            localStorage.setItem('browserFingerprint', fingerprint);
+        }
+
+        function validateFingerprint() {
+            const savedFingerprint = localStorage.getItem('browserFingerprint');
+            const currentFingerprint = getBrowserFingerprint();
+            return savedFingerprint === currentFingerprint;
         }
 
         // Filter options event listeners
@@ -888,6 +900,11 @@ function adjustBuildInfoSpacing() {
         }
 
         function toggleLike(firebaseId, button) {
+            if (!validateFingerprint()) {
+                alert("You've already liked this build.");
+                return;
+            }
+
             const build = window.builds.find(b => b.firebaseId === firebaseId);
             if (!build) return;
 
@@ -952,6 +969,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
