--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         }
 
         .build-likes {
-            color: #059669;
+            color: white;
             display: flex;
             align-items: center;
             gap: 5px;
@@ -969,6 +969,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
