--- a/index.html
+++ b/index.html
@@ -629,20 +629,8 @@
         };
 		
         // Save liked builds to localStorage
-        function getBrowserFingerprint() {
-            return btoa(navigator.userAgent + navigator.language + screen.width + screen.height);
-        }
-
         function saveLikes() {
-            const fingerprint = getBrowserFingerprint();
             localStorage.setItem('likedBuilds', JSON.stringify([...likedBuilds]));
-            localStorage.setItem('browserFingerprint', fingerprint);
-        }
-
-        function validateFingerprint() {
-            const savedFingerprint = localStorage.getItem('browserFingerprint');
-            const currentFingerprint = getBrowserFingerprint();
-            return savedFingerprint === currentFingerprint;
         }
 
         // Filter options event listeners
@@ -882,7 +870,7 @@ function adjustBuildInfoSpacing() {
                 </div>
 
                 <div style="display: flex; gap: 10px;">
-				<button class="action-btn" onclick="toggleLike('${build.firebaseId}', this)">
+				<button class="action-btn ${isLiked ? 'liked' : ''}" onclick="toggleLike('${build.firebaseId}', this)">
                         ${isLiked ? '❤️ Liked!' : '🤍 Like'}
                     </button>
                     <button class="action-btn share-btn" onclick="shareBuild('${build.firebaseId}')">
@@ -915,7 +903,8 @@ function adjustBuildInfoSpacing() {
             // Update Firebase
             updateBuildLikes(firebaseId, isLiking);
             
-            button.textContent = isLiking ? '❤️ Liked!' : '🤍 Like';
+            button.classList.toggle('liked');
+            button.textContent = isLiking ? '❤️ Liked' : '🤍 Like';
         }
 
         async function updateBuildLikes(firebaseId, isLiking) {
@@ -963,6 +952,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
