--- a/index.html
+++ b/index.html
@@ -908,6 +908,12 @@ function adjustBuildInfoSpacing() {
                 alert("You've already liked this build.");
                 return;
             }
+            
+            // If same browser and already liked this build, prevent re-liking
+            if (likedBuilds.has(firebaseId)) {
+                alert("You've already liked this build.");
+                return;
+            }
 
             const build = window.builds.find(b => b.firebaseId === firebaseId);
             if (!build) return;
@@ -925,7 +931,7 @@ function adjustBuildInfoSpacing() {
             updateBuildLikes(firebaseId, isLiking);
             
             button.classList.toggle('liked');
-            button.textContent = isLiking ? '❤️ Liked!' : '🤍 Like';
+            button.textContent = isLiking ? '❤️ Liked' : '🤍 Like';
         }
 
         async function updateBuildLikes(firebaseId, isLiking) {
@@ -973,4 +979,5 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
