--- a/index.html
+++ b/index.html
@@ -828,22 +828,22 @@ function adjustBuildInfoSpacing() {
                         <div style="display: flex; gap: 20px; margin-bottom: 15px;">
                             <div style="flex: 1;">
                                 <strong style="color: #999; font-size: 13px;">Primary:</strong><br>
-                                <span style="font-size: 15px;">${createPrimaryDisplay(build.primary, build.weapon)}</span>
+                                <span style="font-size: 15px; white-space: normal; word-break: break-word;">${createPrimaryDisplay(build.primary, build.weapon)}</span>
                             </div>
                             <div style="flex: 1; border-left: 1px solid #7e7568; padding-left: 20px;">
                                 <strong style="color: #999; font-size: 13px;">Aspect:</strong><br>
-                                ${createAspectDisplay(build.aspect1)}
+                                <span style="white-space: normal; word-break: break-word;">${createAspectDisplay(build.aspect1)}</span>
                             </div>
                         </div>
 
                         <div style="display: flex; gap: 20px; margin-bottom: 15px;">
                             <div style="flex: 1;">
                                 <strong style="color: #999; font-size: 13px;">Secondary:</strong><br>
-                                <span style="font-size: 15px;">${createSecondaryDisplay(build.secondary, build.weapon)}</span>
+                                <span style="font-size: 15px; white-space: normal; word-break: break-word;">${createSecondaryDisplay(build.secondary, build.weapon)}</span>
                             </div>
                             <div style="flex: 1; border-left: 1px solid #7e7568; padding-left: 20px;">
                                 <strong style="color: #999; font-size: 13px;">Aspect:</strong><br>
-                                ${createAspectDisplay(build.aspect2)}
+                                <span style="white-space: normal; word-break: break-word;">${createAspectDisplay(build.aspect2)}</span>
                             </div>
                         </div>
 
@@ -989,6 +989,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
