--- a/index.html
+++ b/index.html
@@ -825,28 +825,28 @@ function adjustBuildInfoSpacing() {
                             </div>
                         </div>
 
-                        <div style="display: flex; gap: 20px; margin-bottom: 15px;">
+						<div style="display: flex; gap: 20px; margin-bottom: 15px;">
                             <div style="flex: 1;">
                                 <strong style="color: #999; font-size: 13px;">Primary:</strong><br>
-                                <span style="font-size: 15px; white-space: normal; word-break: break-word;">${createPrimaryDisplay(build.primary, build.weapon)}</span>
+                                <span style="font-size: 15px; display: block; white-space: normal; word-break: break-word;">${createPrimaryDisplay(build.primary, build.weapon)}</span>
                             </div>
                             <div style="flex: 1; border-left: 1px solid #7e7568; padding-left: 20px;">
                                 <strong style="color: #999; font-size: 13px;">Aspect:</strong><br>
-                                <span style="white-space: normal; word-break: break-word;">${createAspectDisplay(build.aspect1)}</span>
+                                <span style="display: block; white-space: normal; word-break: break-word;">${createAspectDisplay(build.aspect1)}</span>
                             </div>
                         </div>
 
                         <div style="display: flex; gap: 20px; margin-bottom: 15px;">
                             <div style="flex: 1;">
                                 <strong style="color: #999; font-size: 13px;">Secondary:</strong><br>
-                                <span style="font-size: 15px; white-space: normal; word-break: break-word;">${createSecondaryDisplay(build.secondary, build.weapon)}</span>
+                                <span style="font-size: 15px; display: block; white-space: normal; word-break: break-word;">${createSecondaryDisplay(build.secondary, build.weapon)}</span>
                             </div>
                             <div style="flex: 1; border-left: 1px solid #7e7568; padding-left: 20px;">
                                 <strong style="color: #999; font-size: 13px;">Aspect:</strong><br>
-                                <span style="white-space: normal; word-break: break-word;">${createAspectDisplay(build.aspect2)}</span>
+                                <span style="display: block; white-space: normal; word-break: break-word;">${createAspectDisplay(build.aspect2)}</span>
                             </div>
                         </div>
-
+						
                         <div style="border-top: 1px solid #7e7568; padding-top: 15px; margin-top: 15px;">
                             <strong style="color: #999; font-size: 13px; display: block; margin-bottom: 8px;">Forge Upgrades:</strong>
                             <div style="font-size: 14px; line-height: 2.5;">
@@ -989,6 +989,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
