--- a/index.html
+++ b/index.html
@@ -298,6 +298,41 @@
             vertical-align: middle;
             margin-right: 8px;
         }
+
+		.toast-notification {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #059669;
+            color: white;
+            padding: 15px 20px;
+            border-radius: 4px;
+            font-size: 14px;
+            z-index: 2000;
+            animation: slideIn 0.3s ease-in-out, slideOut 0.3s ease-in-out 2.7s forwards;
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateX(100px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes slideOut {
+            from {
+                opacity: 1;
+                transform: translateX(0);
+            }
+            to {
+                opacity: 0;
+                transform: translateX(100px);
+            }
+        }
     </style>
     <script type="module">
         // Firebase imports
@@ -964,10 +999,19 @@ function adjustBuildInfoSpacing() {
         function shareBuild(firebaseId) {
             const url = `${window.location.origin}${window.location.pathname}?build=${firebaseId}`;
             navigator.clipboard.writeText(url).then(() => {
-                alert('Build link copied to clipboard!');
+                const toast = document.createElement('div');
+                toast.className = 'toast-notification';
+                toast.textContent = 'Build link copied to clipboard!';
+                document.body.appendChild(toast);
+                setTimeout(() => toast.remove(), 3000);
             }).catch(err => {
                 console.error('Failed to copy:', err);
-                alert('Failed to copy link');
+                const toast = document.createElement('div');
+                toast.className = 'toast-notification';
+                toast.textContent = 'Failed to copy link';
+                toast.style.backgroundColor = '#dc2626';
+                document.body.appendChild(toast);
+                setTimeout(() => toast.remove(), 3000);
             });
         }
 
@@ -983,6 +1027,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
