--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ function adjustBuildInfoSpacing() {
                     <button class="action-btn ${isLiked ? 'liked' : ''}" onclick="toggleLike('${build.firebaseId}', this)">
                         ${isLiked ? '❤️ Liked' : '🤍 Like'}
                     </button>
-                    <button class="action-btn share-btn" onclick="shareBuild('${build.firebaseId}')">
+                    <button class="action-btn share-btn" onclick="shareBuild('${build.firebaseId}', this)">
                         📋 Copy Link
                     </button>
                 </div>
@@ -995,10 +995,9 @@ function adjustBuildInfoSpacing() {
             }
         }
 
-        function shareBuild(firebaseId) {
+        function shareBuild(firebaseId, button) {
             const url = `${window.location.origin}${window.location.pathname}?build=${firebaseId}`;
             navigator.clipboard.writeText(url).then(() => {
-                const button = event.target;
                 const rect = button.getBoundingClientRect();
                 
                 const toast = document.createElement('div');
@@ -1027,6 +1026,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
