--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         }
 
 		.toast-notification {
-            position: absolute;
+            position: fixed;
             background-color: #059669;
             color: white;
             padding: 15px 20px;
@@ -1026,6 +1026,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
