--- a/creator.html
+++ b/creator.html
@@ -257,6 +257,7 @@
         <div class="nav-links">
             <a href="index.html">Builds</a>
             <a href="creator.html" class="active">Build Creator</a>
+            <a href="about.html">About</a>
         </div>
     </nav>
 
@@ -1163,4 +1164,5 @@
         </script>
     </body>
 </html>
+
 
