--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
         <div class="nav-links">
             <a href="index.html" class="active">Builds</a>
             <a href="creator.html">Build Creator</a>
+			<a href="about.html">About</a>
         </div>
     </nav>
 
@@ -1023,6 +1024,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
