--- a/about.html
+++ b/about.html
@@ -104,6 +104,7 @@
         .discord-link img {
             width: 20px;
             height: 20px;
+            vertical-align: middle;
         }
     </style>
 </head>
@@ -138,7 +139,7 @@
         <div class="faq-item">
             <div class="faq-question">Why is the website using fingerprinting?</div>
             <div class="faq-answer">
-                Fingerprinting is a safe and industry-standard practice used to identify browsers without storing personal data. Since the website doesn't use accounts, it instead uses browser fingerprinting to track likes and prevent abuse. This method stores only a hash of your browser characteristics locally - no sensitive information is collected or stored on our servers.
+                Fingerprinting is a safe and industry-standard practice used to identify browsers without storing personal data. Since the website doesn't use accounts, it instead uses browser fingerprinting to track likes and prevent abuse. This method stores only a hash of your browser characteristics locally - no sensitive information is collected or stored on any third-party server.
             </div>
         </div>
 
