--- a/about.html
+++ b/about.html
@@ -145,14 +145,14 @@
         <div class="faq-item">
             <div class="faq-question">How can I edit my build?</div>
             <div class="faq-answer">
-                Due to the website's account-free system, direct editing of builds is not currently available. If you need to make changes to a build you've created, please join the Abyssus Wiki Discord server and visit the <strong>#edit-requests</strong> channel to request an edit.
+                Due to the website's account-free system, direct editing of builds is not currently available. If you need to make changes to a build you've created, please join the Abyssus Wiki Discord server and visit the <strong><span style="color: #059669;">#edit-requests</span></strong> channel to request an edit.
             </div>
         </div>
 
         <div class="faq-item">
             <div class="faq-question">How can I suggest changes?</div>
             <div class="faq-answer">
-                Join the Abyssus Wiki Discord server and head to the <strong>#builds-general</strong> channel to share your ideas and discuss builds with other community members.
+                Join the Abyssus Wiki Discord server and head to the <strong><span style="color: #059669;">#builds-general</span></strong> channel to share your ideas and discuss builds with other community members.
             </div>
         </div>
 
