--- a/creator.html
+++ b/creator.html
@@ -228,6 +228,26 @@
         .select-with-icon select {
             padding-left: 38px;
         }
+
+        .tag-btn {
+            background-color: #232a2e;
+            color: white;
+            border: 2px solid #7e7568;
+            padding: 10px 16px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: all 0.2s;
+        }
+
+        .tag-btn:hover {
+            border-color: #059669;
+        }
+
+        .tag-btn.selected {
+            background-color: #059669;
+            border-color: #059669;
+        }
     </style>
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
@@ -558,7 +578,20 @@
             <textarea id="description" placeholder="Here should be a short description."></textarea>
         </div>
 
+        <div class="form-section">
+            <div class="section-header">Tags</div>
+            <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+                <div class="tag-btn" data-tag="All-rounder">All-rounder</div>
+                <div class="tag-btn" data-tag="Anti-Boss">Anti-Boss</div>
+                <div class="tag-btn" data-tag="Deep Water 30">Deep Water 30</div>
+                <div class="tag-btn" data-tag="Bottomless Chasm">Bottomless Chasm</div>
+                <div class="tag-btn" data-tag="Speedrun">Speedrun</div>
+                <div class="tag-btn" data-tag="Support">Support</div>
+            </div>
+        </div>
+
         <button class="submit-btn" id="submitBtn" onclick="addBuild()">Add Build</button>
+        
     </div>
 
     <script>
@@ -1096,6 +1129,17 @@
             });
         }
 
+        // Tag selection
+        document.querySelectorAll('.tag-btn').forEach(btn => {
+            btn.addEventListener('click', function() {
+                this.classList.toggle('selected');
+            });
+        });
+
+        function getSelectedTags() {
+            return Array.from(document.querySelectorAll('.tag-btn.selected')).map(btn => btn.dataset.tag);
+        }
+        
         async function addBuild() {
             const submitBtn = document.getElementById('submitBtn');
             const errorMsg = document.getElementById('errorMessage');
@@ -1143,6 +1187,7 @@
                     charm1: charm1,
                     charm2: charm2,
                     description: description,
+                    tags: getSelectedTags(),
                     date: new Date().toISOString(),
                     likes: 0
                 };
@@ -1164,5 +1209,6 @@
         </script>
     </body>
 </html>
+
 
 
