--- a/creator.html
+++ b/creator.html
@@ -285,10 +285,11 @@
         <h1>Create Build</h1>
 
         <!-- Tags Guide -->
-        <div style="background-color: #141516; border: 2px solid #7e7568; border-radius: 8px; padding: 20px; position: fixed; right: 30px; top: 350px; width: 320px; max-height: 400px; z-index: 50; overflow: hidden;">
+
+        <div style="background-color: #141516; border: 2px solid #7e7568; border-radius: 8px; padding: 20px; position: fixed; right: 30px; bottom: 200px; width: 320px; max-height: 500px; z-index: 9999;">
     <div style="color: #059669; margin-bottom: 20px; font-size: 14px; text-transform: uppercase; font-weight: bold;">Tags Guide</div>
     
-    <div style="display: flex; flex-direction: column; gap: 15px; overflow-y: auto; max-height: 350px; padding-right: 8px;">
+    <div style="display: flex; flex-direction: column; gap: 15px; max-height: 420px; overflow-y: auto; padding-right: 8px;">
         <div>
             <div style="color: #059669; font-weight: bold; font-size: 13px; margin-bottom: 4px;">Support</div>
             <div style="color: #999; font-size: 12px; line-height: 1.5;">Provides strong team utility.</div>
@@ -1248,6 +1249,7 @@
         </script>
     </body>
 </html>
+
 
 
 
